# gensi

./: .gitignore  CLAUDE.md  EXAMPLES.md  README.md  example.gensi  gensi-format-specification.md  main.py  prompt.md  pyproject.toml
src/gensi/: __init__.py  cli.py  gui.py
src/gensi/core/: __init__.py  cache.py  cached_fetcher.py  cover_generator.py  epub_builder.py  extractor.py  fetcher.py  image_optimizer.py  image_processor.py  json_utils.py  parser.py  processor.py  python_executor.py  replacements.py  sanitizer.py  typography.py
src/gensi/templates/: article.xhtml.j2  nav.xhtml.j2  styles.css
src/gensi/utils/: __init__.py  date_formatter.py  metadata_fallback.py  thumbnail_extractor.py  url_utils.py
tests/: __init__.py  conftest.py  test_auto_cover_integration.py  test_cache.py  test_cover_extension.py  test_cover_generator.py  test_date_formatter.py  test_epub_builder.py  test_extractor.py  test_fetcher.py  test_image_optimizer.py  test_image_processor.py  test_integration.py  test_json_utils.py  test_parser.py  test_python_executor.py  test_replacements.py  test_sanitizer.py  test_thumbnail_extractor.py  test_typography.py  test_utils.py
tests/fixtures/html/: article1.html  article2.html  article3.html  article_complex.html  article_with_images.html  article_with_lazy_images.html  atom_article1.html  atom_article2.html  blog_index.html  cover_page.html  rss_article1.html  rss_article2.html  rss_article3.html  tagged1.html  tagged2.html  tagged3.html  tagged4.html
tests/fixtures/rss/: test_feed_atom.xml  (+2 more)
tests/helpers/: __init__.py  epub_validator.py
