[project]
name = "gensi"
version = "0.1.0"
description = "Generate EPUB files from web sources using .gensi recipe files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "curl-cffi>=0.6.2",
    "lxml>=5.1.0",
    "nh3>=0.2.15",
    "feedparser>=6.0.11",
    "jinja2>=3.1.3",
    "jsonpath-ng>=1.6.0",
    "ebooklib>=0.18",
    "aiofiles>=23.2.1",
    "cssselect>=1.3.0",
    "python-slugify>=8.0.0",
    "typogrify>=2.0.7",
    "dateparser>=1.2.0",
    "babel>=2.14.0",
    "diskcache>=5.6.3",
    "platformdirs>=4.0.0",
]

[project.scripts]
gensi = "gensi.cli:main"
gensi-gui = "gensi.gui:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2",
    "pytest-httpserver>=1.0.8",
    "black>=23.12.0",
    "ruff>=0.1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
